[package]
name = "iterlower"
description = "Final-sigma-correct lowercasing iterator adapter with option for Turkish/Azeri I behavior"
version = "1.0.1"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/iterlower/"
homepage = "https://docs.rs/iterlower/"
repository = "https://github.com/hsivonen/iterlower"
keywords = ["unicode", "greek", "turkish", "azeri"]
categories = ["text-processing", "internationalization"]

[dependencies]
icu_properties = "2.0.1"
